[package]
name = "nspawn-lite"
version = "0.1.0"
authors = ["范辉 <fanhui.x@gmail.com>"]
edition = "2018"

[dependencies]
myutil = {git = "https://gitee.com/kt10/myutil.git", branch = "master"}
clap = "2.33"

nix = "0.17"
libc = "0.2"

[features]

[profile.dev]
overflow-checks = true
panic = "unwind"

[profile.release]
lto = true
incremental = false
overflow-checks = false
codegen-units = 1
panic = "unwind"
